swift.pl supports v1.0

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net-OpenStack-Swift
 
 {{$NEXT}}
+    - swift.pl supports v1.0
 
 0.11 2016-04-04T05:10:19Z
     - Implemented full listing
