--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net-OpenStack-Swift
 
 {{$NEXT}}
+    - Add option to set the region #25
 
 0.12 2017-08-17T01:43:11Z
     - swift.pl supports v1.0
